tests/errors/enum-payload-count.ari
enum OptionI32 {
  None,
  Some(i32),
}

fn main() -> i64 {
  let value = Some();
  return 0;
}
